fix saveCompilation endpoint